should resolve issue 2409.

--- a/bibsonomy-webapp/src/main/webapp/resources/css/bootstrap-main.less
+++ b/bibsonomy-webapp/src/main/webapp/resources/css/bootstrap-main.less
@@ -15,70 +15,6 @@
     -moz-osx-font-smoothing: grayscale;
 }
 
-.glyphicon-bookmark:before {
-    content: @fa-var-bookmark;   
-}
-
-.glyphicon-asterisk:before {
-    content: @fa-var-asterisk;
-}
-
-.glyphicon-remove:before {
-    content: @fa-var-times;
-}
-
-.glyphicon-edit:before {
-    content: @fa-var-pencil;  
-} 
-
-.glyphicon-floppy-disk:before {
-    content: @fa-var-copy;   
-}
-
-.glyphicon-folder-open:before {
-	content: @fa-var-clipboard;
-}
-
-.glyphicon-inbox:before {
-	content: @fa-var-inbox;
-}
-
-.glyphicon-user:before {
-	content: @fa-var-user;
-}
-
-.glyphicon-tag:before {
-	content: @fa-var-tag;
-}
-
-.glyphicon-tags:before {
-	content: @fa-var-tags;
-}
-
-.glyphicon-question-sign:before {
-	content: @fa-var-question-circle;
-}
-
-.glyphicon-cog:before {
-	content: @fa-var-cog;
-}
-
-.glyphicon-off:before {
-	content: @fa-var-power-off;
-}
-
-.glyphicon-calendar:before {
-	content: @fa-var-calendar;
-}
-
-.glyphicon-plus:before {
-	content: @fa-var-plus;
-}
-
-.glyphicon-download-alt:before {
-	content: @fa-var-download;
-}
-
 .socicon-blogger:before {
 	content: @fa-var-book;
 }
@@ -428,13 +364,11 @@ ul.posts li.post:last-child {
 	border-bottom: none;
 }
 
-.glyphicon-private:before {
-    content: @fa-var-eye-slash ;
-}
+
 
 
 li.post div.in-my-collection,
-li.post div.glyphicon-private,
+li.post div.fa-eye-slash,
 li.post div.remote-post {
 	position:relative; 
 	width: 0px;
@@ -457,7 +391,7 @@ li.post div.remote-post {
 }
 
 
-li.post div.glyphicon-private {
+li.post div.fa-eye-slash {
 	font-size: 18px; 
 	top: -88px; 
 	left: 42px; 
@@ -842,7 +776,7 @@ div.newsbox ul.news {
 	cursor: pointer;
 }
 
-#recommendedTags li > span.glyphicon {
+#recommendedTags li > span.fa {
 	font-size: 10px;
 	line-height: 18px;
 	margin-right: 2px;
@@ -1142,7 +1076,7 @@ span.label.label-danger > a {
 	margin-bottom: 8px;
 }
 
-.thumbnail-container .glyphicon {
+.thumbnail-container .fa {
 	display: block;
 }
 
