--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/admin/statistics.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/admin/statistics.jspx
@@ -158,11 +158,11 @@
 				<tr>
 					<td>bookmarks</td>
 					<td data-url="/statistics?type=posts&amp;grouping=all&amp;resourceType=bookmark&amp;filter=history">loading</td>
-					<td data-url="/statistics?type=posts&amp;grouping=all&amp;resourceType=publication&amp;filter=history&amp;contraints=without_dblp">loading</td>
+					<td data-url="/statistics?type=posts&amp;grouping=all&amp;resourceType=bookmark&amp;filter=history&amp;contraints=without_dblp">loading</td>
 				</tr>
 				<tr>
 					<td>publications</td>
-					<td data-url="/statistics?type=posts&amp;grouping=all&amp;resourceType=bookmark&amp;filter=history">loading</td>
+					<td data-url="/statistics?type=posts&amp;grouping=all&amp;resourceType=publication&amp;filter=history">loading</td>
 					<td data-url="/statistics?type=posts&amp;grouping=all&amp;resourceType=publication&amp;filter=history&amp;contraints=without_dblp">loading</td>
 				</tr>
 				<tr>
